--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@opentelemetry/api": "^1.4.1",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.3",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -34,8 +35,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
+    "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.1",
     "lucide-react": "^0.438.0",
-    "next": "14.2.7",
+    "next": "^14.2.20",
     "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
     "react": "^18",
