--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
     "embla-carousel-react": "^8.5.1",
     "firebase": "^11.1.0",
     "lucide-react": "^0.438.0",
-    "next": "14.2.7",
+    "next": "^14.2.21",
     "next-auth": "^4.24.8",
+    "next-international": "^1.3.1",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
