--- a/package.json
+++ b/package.json
@@ -69,11 +69,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "axios": "^1.7.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
+    "firebase-admin": "^13.0.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "react-toastify": "^11.0.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
